--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
+annotated-types==0.7.0
+anyio==4.8.0
+asgiref==3.8.1
+attrs==24.3.0
+click==8.1.8
+colorama==0.4.6
 Django==3.2.16
-mixer==7.2.2
-pep8-naming==0.13.3
-pytest==7.1.3
-pytest-django==4.5.2
+django_debug_toolbar==3.8.1
+exceptiongroup==1.2.2
+Faker==12.0.1
+fastapi==0.115.6
 flake8==5.0.4
 flake8-docstrings==1.7.0
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+line_profiler==4.2.0
+mccabe==0.7.0
+mixer==7.2.2
+packaging==24.2
+pep8-naming==0.13.3
+pluggy==1.5.0
+py==1.11.0
+pycodestyle==2.9.1
+pydantic==2.10.5
+pydantic_core==2.27.2
+pydocstyle==6.3.0
+pyflakes==2.5.0
+pytest==7.1.3
+pytest-django==4.5.2
+python-dateutil==2.9.0.post0
+pytz==2024.2
+six==1.17.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+sqlparse==0.5.3
+starlette==0.41.3
+tomli==2.2.1
+typing_extensions==4.12.2
+uvicorn==0.34.0
